[metadata]
name = zcp
summary = A Timer task for polling ceilometer metrics into zabbix
description-file =
    README.md
author = Hanxi Liu
author-email = apolloliuhx@gmail.com
home-page = https://github.com/apolloliu/ZCP
classifier =
    Intended Audience :: Information Technology
    Intended Audience :: System Administrators
    License :: OSI Approved :: Apache Software License
    Operating System :: POSIX :: Linux
    Programming Language :: Python
    Programming Language :: Python :: 2
    Programming Language :: Python :: 2.7
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.5

[files]
packages =
    zcp

[build_sphinx]
source-dir = doc/source
build-dir = doc/build
all_files = 1
